<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Color SMS</string>
    <string name="facebook_app_id" translatable="false">128794158052413</string>
    <string name="sync_account_type" translatable="false">com.color.sms.messages.emoji.sync_account</string>
    <string name="share_intent_label" translatable="false">Color SMS</string>
    <string name="share_intent_activity_label">Select conversation</string>
    <string name="sendButtonContentDescription">Send Message</string>
    <string name="settings">Settings</string>
    <string name="required_permissions_promo">Messaging needs permission to SMS, Phone and Contacts.</string>
    <string name="enable_permission_procedure">You can change permissions in Settings > Apps > Messaging > Permissions.</string>
    <string name="enable_permission_procedure_description">You can change permissions in Settings, Apps, Messaging, Permissions.</string>
    <string name="contact_picker_frequents_tab_title">Frequents</string>
    <string name="contact_picker_all_contacts_tab_title">All contacts</string>
    <string name="contact_picker_select_group">Start group chat</string>
    <string name="contact_list_send_to_text">Send to <xliff:g id="destination">%s</xliff:g></string>
    <string name="mediapicker_cameraChooserDescription">Capture pictures or video</string>
    <string name="mediapicker_galleryChooserDescription">Choose images from this device</string>
    <string name="mediapicker_audioChooserDescription">Record audio</string>
    <string name="mediapicker_gallery_title">Choose photo</string>
    <string name="mediapicker_gallery_item_selected_content_description">The media is selected.</string>
    <string name="mediapicker_gallery_item_unselected_content_description">The media is unselected.</string>
    <string name="mediapicker_gallery_title_selection"><xliff:g id="count">%d</xliff:g> selected</string>
    <string name="mediapicker_gallery_image_item_description">image <xliff:g id="date">%1$tB %1$te %1$tY %1$tl %1$tM %1$tp</xliff:g></string>
    <string name="mediapicker_gallery_image_item_description_no_date">image</string>
    <string name="mediapicker_audio_title">Record audio</string>
    <string name="network_error_and_try_again">Network errors. Please try again.</string>
    <string name="action_share">Share</string>
    <string name="action_lock">Lock</string>
    <string name="action_unlock">Unlock</string>
    <string name="posted_just_now">"Just now"</string>
    <string name="posted_now">"Now"</string>
    <plurals name="num_minutes_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> min</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> mins</item>
    </plurals>
    <plurals name="num_hours_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> hour</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="num_days_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> day</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> days</item>
    </plurals>
    <plurals name="week_count">
        
        <item quantity="one">a week</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> weeks</item>
    </plurals>
    <plurals name="month_count">
        
        <item quantity="one">a month</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> months</item>
    </plurals>
    <plurals name="year_count">
        
        <item quantity="one">a year</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> years</item>
    </plurals>
    <string name="class_0_message_activity">Class 0 message</string>
    <string name="save">Save</string>
    <string name="sms_storage_low_title">Storage space running out</string>
    <string name="sms_storage_low_text">Messaging might not send or receive messages until more space is available on your device.</string>
    <string name="sms_storage_low_notification_ticker">Low SMS storage. You may need to delete messages.</string>
    <string name="enter_phone_number_title">Confirm your phone number</string>
    <string name="enter_phone_number_text">This one-time step will ensure Messaging will deliver your group messages properly.</string>
    <string name="enter_phone_number_hint">Phone number</string>
    <string name="delete_all_media">Delete all messages with media</string>
    <string name="delete_oldest_messages">Delete messages older than <xliff:g id="duration">%s</xliff:g></string>
    <string name="ignore">Ignore</string>
    <string name="delete_all_media_confirmation">Delete all messages with media?</string>
    <string name="delete_oldest_messages_confirmation">Delete messages older than <xliff:g id="duration">%s</xliff:g>?</string>
    <string name="auto_delete_oldest_messages_confirmation">Delete messages older than <xliff:g id="duration">%s</xliff:g> and turn on auto-delete?</string>
    <string name="incoming_text_sender_content_description"><xliff:g id="sender">%s</xliff:g> said</string>
    <string name="outgoing_text_sender_content_description">You said</string>
    <string name="incoming_sender_content_description">Message from <xliff:g id="sender">%s</xliff:g></string>
    <string name="outgoing_sender_content_description">You sent a message</string>
    <string name="message_status_sending">Sending&#8230;</string>
    <string name="message_status_send_failed">Not sent. Tap to try again.</string>
    <string name="message_status_send_retrying">Not sent. Trying again&#8230;</string>
    <string name="message_status_resend">Resend or delete</string>
    <string name="message_status_send_failed_emergency_number">Please make a voice call to emergency services. Your text message could not be delivered at this time.</string>
    <string name="message_title_manual_download">New MMS message to download</string>
    <string name="message_title_downloading">New MMS message</string>
    <string name="message_title_download_failed">Couldn\'t download</string>
    <string name="message_status_download_failed">Tap to try again</string>
    <string name="message_status_download">Tap to download</string>
    <string name="message_status_download_action">Download or delete</string>
    <string name="message_status_downloading">Downloading&#8230;</string>
    <string name="message_status_download_error">Message expired or not available</string>
    <string name="mms_info">size: <xliff:g id="messageSize">%1$s</xliff:g>, expiration: <xliff:g id="messageExpire">%2$s</xliff:g></string>
    <string name="unknown_sender">Unknown sender</string>
    <string name="delivered_status_content_description">Delivered</string>
    <string name="notification_send_failures_line1_singular">Message not sent</string>
    <string name="notification_send_failures_line1_plural">Some messages not sent in Messaging</string>
    <plurals name="notification_send_failures">
        <item quantity="one"><xliff:g id="messages">%d</xliff:g> messages in one conversation</item>
        <item quantity="other"><xliff:g id="messages">%d</xliff:g> messages in <xliff:g id="conversations">%d</xliff:g> conversations</item>
    </plurals>
    <string name="notification_download_failures_line1_singular">Message not downloaded</string>
    <string name="notification_download_failures_line1_plural">Some messages not downloaded in Messaging</string>
    <string name="action_delete">Delete</string>
    <string name="action_notification_off">Turn off notifications</string>
    <string name="action_notification_on">Turn on notifications</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_download">Download</string>
    <string name="action_send">Send</string>
    <string name="action_delete_message">Delete</string>
    <string name="notifications_enabled_pref_title">Notifications</string>
    <string name="notification_sound_pref_title">Sound</string>
    <string name="notification_vibrate_pref_title">Vibrate</string>
    <string name="delivery_reports_pref_title">SMS delivery reports</string>
    <string name="delivery_reports_pref_summary">Request a delivery report for each SMS you send</string>
    <string name="auto_retrieve_mms_pref_title">Auto-retrieve</string>
    <string name="auto_retrieve_mms_pref_summary">Automatically retrieve MMS messages</string>
    <string name="auto_retrieve_mms_when_roaming_pref_title">Roaming auto-retrieve</string>
    <string name="auto_retrieve_mms_when_roaming_pref_summary">Automatically retrieve MMS when roaming</string>
    <string name="group_mms_pref_title">Group messaging</string>
    <string name="mms_phone_number_pref_title">Your phone number</string>
    <string name="send_sound_pref_title">Outgoing message sounds</string>
    <string name="message_context_menu_copy_text">Copy text</string>
    <string name="message_context_menu_view_details">View details</string>
    <string name="message_context_menu_forward_message">Forward</string>
    <string name="action_block">Block</string>
    <string name="blocked_contacts_title">Blocked Contacts</string>
    <string name="advanced_settings">Advanced</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_privacy_policy">Privacy Policy</string>
    <string name="setting_terms_of_service">Terms of Service</string>
    <string name="setting_gdpr" translatable="false">Analytics &amp; Advertising</string>
    <string name="setting_sms_pop_ups">SMS Pop-ups</string>
    <string name="setting_sms_pop_ups_summary">Pop up a window when receiving messages</string>
    <string name="setting_sms_show">SMS Show</string>
    <string name="setting_sms_show_summary">Beautify SMS reminder effects</string>
    <string name="privacy_mode_settings">Privacy Mode</string>
    <string name="signature">Signature</string>
    <string name="action_pin">Pin to Top</string>
    <string name="private_box_setting_security">Security</string>
    <string name="private_box_setting_security_summary">Modify Password</string>
    <string name="private_box_setting_entrance">Entrance</string>
    <string name="private_box_setting_entrance_summary">Hide the icon</string>
    <string name="private_box_setting_notification">Enable Notifications</string>
    <string name="private_box_setting_notification_summary">When disable this option, messages from private contacts will not pop up any notification.</string>
    <string name="firebase_sync_desktop_settings_title" translatable="false">Sync Settings</string>
    <string name="firebase_sync_desktop_settings_description_logged_out" translatable="false">After logging in, you can sync your sms settings across multiple devices.</string>
    <string name="send_delay_settings">Send Delay</string>
    <string name="settings_vibrate_off">Off</string>
    <string name="settings_vibrate_normal">Normal</string>
    <string name="settings_vibrate_short">Short</string>
    <string name="settings_vibrate_long">Long</string>
    <string name="settings_vibrate_multiple_short">Multiple Short</string>
    <string name="settings_vibrate_multiple_long">Multiple Long</string>
    <string name="settings_led_color_title">LED Color\n(some device may not support)</string>
    <string name="settings_led_none">None</string>
    <string name="settings_led_white">White</string>
    <string name="settings_led_red">Red</string>
    <string name="settings_led_blue">Blue</string>
    <string name="settings_led_yellow">Yellow</string>
    <string name="settings_led_green">Green</string>
    <string name="settings_led_purple">Purple</string>
    <string name="settings_led_cyan">Cyan</string>
</resources>