<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/top_tool_bar_view"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--outgoing messages sounds-->
            <com.android.messaging.ui.appsettings.SettingItemView
                android:id="@+id/setting_item_outgoing_message_sounds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/send_sound_pref_title"
                app:type="switchView" />

            <!--Notifications-->
            <com.android.messaging.ui.appsettings.SettingItemView
                android:id="@+id/setting_item_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/notifications_enabled_pref_title"
                app:type="switchView" />

            <!--SMS Pop-ups-->
            <com.android.messaging.ui.appsettings.SettingItemView
                android:id="@+id/setting_item_sms_pop_ups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/setting_sms_pop_ups_summary"
                app:title="@string/setting_sms_pop_ups"
                app:type="switchView" />

            <com.android.messaging.ui.appsettings.SettingItemView
                android:id="@+id/setting_item_privacy_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/privacy_mode_settings"
                app:type="withTriangle" />

            <!--SMS Show-->
            <com.android.messaging.ui.appsettings.SettingItemView
                android:id="@+id/setting_item_sms_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:summary="@string/setting_sms_show_summary"
                app:title="@string/setting_sms_show"
                app:type="switchView" />

            <!--Sound-->
            <com.android.messaging.ui.appsettings.SettingItemView
                android:id="@+id/setting_item_sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/notification_sound_pref_title"
                app:type="withTriangle" />

            <!--Vibrate-->
            <com.android.messaging.ui.appsettings.SettingItemView
                android:id="@+id/setting_item_vibrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:key="@string/notification_vibration_pref_key"
                app:title="@string/notification_vibrate_pref_title"
                app:type="switchView" />

            <!--Send Delay-->
            <com.android.messaging.ui.appsettings.SettingItemView
                android:id="@+id/setting_item_send_delay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/send_delay_settings"
                app:type="2"/>

            <!--Signature-->
            <com.android.messaging.ui.appsettings.SettingItemView
                android:id="@+id/setting_item_signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/signature"
                app:type="normal" />

            <!--Blocked contacts-->
            <com.android.messaging.ui.appsettings.SettingItemView
                android:id="@+id/setting_item_blocked_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/blocked_contacts_title"
                app:type="withTriangle" />

            <!--Advanced-->
            <com.android.messaging.ui.appsettings.SettingItemView
                android:id="@+id/setting_item_advanced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/advanced_settings"
                app:type="withTriangle" />

            <!--feedback-->
            <com.android.messaging.ui.appsettings.SettingItemView
                android:id="@+id/setting_item_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/setting_feedback"
                app:type="normal"/>

            <com.android.messaging.ui.appsettings.SettingItemView
                android:id="@+id/sync_settings_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/firebase_sync_desktop_settings_title"
                app:summary="@string/firebase_sync_desktop_settings_description_logged_out"
                app:type="normal"/>


            <!--privacy policy-->
            <com.android.messaging.ui.appsettings.SettingItemView
                android:id="@+id/setting_item_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/setting_privacy_policy"
                app:type="normal" />

            <!--terms of services-->
            <com.android.messaging.ui.appsettings.SettingItemView
                android:id="@+id/setting_item_terms_of_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/setting_terms_of_service"
                app:type="normal" />

            <!--analytics and advertising-->
            <com.android.messaging.ui.appsettings.SettingItemView
                android:id="@+id/setting_item_analytics_advertising"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/setting_gdpr"
                app:type="normal"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
