<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.android.messaging.ui.view.MessagesTextView
        android:id="@id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_btn_margin_left"
        android:lineSpacingExtra="3.3sp"
        android:text="@string/settings_led_color_title"
        android:textColor="#6e717b"
        android:textSize="13.3sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:typeface="@string/custom_font_medium"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/led_color_none"
            style="@style/SelectPrivacyModeRadioGroup"
            android:text="@string/settings_led_none"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/led_color_white"
            style="@style/SelectPrivacyModeRadioGroup"
            android:text="@string/settings_led_white"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/led_color_red"
            style="@style/SelectPrivacyModeRadioGroup"
            android:text="@string/settings_led_red"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/led_color_blue"
            style="@style/SelectPrivacyModeRadioGroup"
            android:text="@string/settings_led_blue"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/led_color_yellow"
            style="@style/SelectPrivacyModeRadioGroup"
            android:text="@string/settings_led_yellow"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/led_color_green"
            style="@style/SelectPrivacyModeRadioGroup"
            android:text="@string/settings_led_green"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/led_color_purple"
            style="@style/SelectPrivacyModeRadioGroup"
            android:text="@string/settings_led_purple"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/led_color_cyan"
            style="@style/SelectPrivacyModeRadioGroup"
            android:text="@string/settings_led_cyan"/>
    </RadioGroup>
</android.support.constraint.ConstraintLayout>