<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.android.messaging.ui.view.MessagesTextView
        android:id="@id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notification_vibrate_pref_title"
        android:textSize="13.3sp"
        android:textColor="#6e717b"
        android:lineSpacingExtra="3.3sp"
        android:layout_marginStart="@dimen/dialog_btn_margin_left"
        app:typeface="@string/custom_font_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/vibrate_off"
            style="@style/SelectPrivacyModeRadioGroup"
            android:text="@string/settings_vibrate_off" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/vibrate_normal"
            style="@style/SelectPrivacyModeRadioGroup"
            android:text="@string/settings_vibrate_normal" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/vibrate_short"
            style="@style/SelectPrivacyModeRadioGroup"
            android:text="@string/settings_vibrate_short" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/vibrate_long"
            style="@style/SelectPrivacyModeRadioGroup"
            android:text="@string/settings_vibrate_long" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/vibrate_multiple_short"
            style="@style/SelectPrivacyModeRadioGroup"
            android:text="@string/settings_vibrate_multiple_short" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/vibrate_multiple_long"
            style="@style/SelectPrivacyModeRadioGroup"
            android:text="@string/settings_vibrate_multiple_long" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>